# django-autosend

./: README.md  db.sqlite3  dump.rdb  manage.py  pyproject.toml
contact/: forms.py  tasks.py  views.py
django_autosend/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
templates/: contactform.html  index.html  layout.html
