[project]
name = "django-autosend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "celery[redis]>=5.5.3",
    "django>=5.2.8",
    "django-tailwind[cookiecutter,honcho,reload]>=4.4.1",
    "python-decouple>=3.8",
    "requests>=2.32.5",
]
